listing users with transaction is done